Finished spaghetti page

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,5 +6,27 @@
 </head>
 <body>
     <h1>Spaghetti</h1>
+    <img src="../Spaghetti.jpg" alt="Delicious spaghetti">
+    <h3>Description</h3>
+    <p>Spaghetti, the most delicious noodle best food on the face of the planet.
+        Only facts are being stated. This recipe will allow you to prepare spaghetti
+        so delicious, so divine, that <strong><em>God</em> himself</strong> will descend from the heavens for a
+        taste. Are you ready? Lets dive in
+    </p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>Spaghetti noodles</li>
+        <li>Marinara sauce(yes marinara, not pasta)</li>
+        <li>Angus meatballs</li>
+        <li>(Subscribe to my newsletter for an in-depth guide of the art of seasoning)</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Boil them noodles</li>
+        <li>Simmer that heavenly sauce</li>
+        <li>Slap those juicy meatballs in the oven for [redacted] mins</li>
+        <li>Place meatballs into the marinara sauce to finish cooking them</li>
+        <li>Profit, you're welcome</li>
+    </ol>
 </body>
 </html>
