Fixed typo on line 11

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,7 +8,7 @@
     <h1>Spaghetti</h1>
     <img src="../Spaghetti.jpg" alt="Delicious spaghetti">
     <h3>Description</h3>
-    <p>Spaghetti, the most delicious noodle best food on the face of the planet.
+    <p>Spaghetti, the most delicious noodle based food on the face of the planet.
         Only facts are being stated. This recipe will allow you to prepare spaghetti
         so delicious, so divine, that <strong><em>God</em> himself</strong> will descend from the heavens for a
         taste. Are you ready? Lets dive in
