Fixed dead links

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href="images/Spaghetti.html">Spaghetti</a>
-        <a href="images/oatmeal.html">Oatmeal</a>
-        <a href="images/chickenwrap.html">Chicken Wrap</a>
+        <a href="recipes/Spaghetti.html">Spaghetti</a>
+        <a href="recipes/oatmeal.html">Oatmeal</a>
+        <a href="recipes/chicken-wrap.html">Chicken Wrap</a>
     </body>
 </html>
