--- a/recipes/chicken-wrap.html
+++ b/recipes/chicken-wrap.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Chicken wrap</h1>
-    <img src="../chickenwrap.jpg" alt="Divine chicken wrap">
+    <img src="../images/chickenwrap.jpg" alt="Divine chicken wrap">
     <h3>Description</h3>
     <p>
         This chicken wrap is the eighth wonder of the world. Carbs, fats, protein; the
