--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Oatmeal</h1>
-    <img src="../oatmeal.jpg" alt="Delicious oatmeal">
+    <img src="../images/oatmeal.jpg" alt="Delicious oatmeal">
     <h3>Description</h3>
     <p>
         The breakfast of champions. Oatmeal is one of the most versatile meals out there. It's
