--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Spaghetti</h1>
-    <img src="../Spaghetti.jpg" alt="Delicious spaghetti">
+    <img src="../images/Spaghetti.jpg" alt="Delicious spaghetti">
     <h3>Description</h3>
     <p>Spaghetti, the most delicious noodle based food on the face of the planet.
         Only facts are being stated. This recipe will allow you to prepare spaghetti
