--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/Spaghetti.html">Spaghetti</a>
+        <a href="recipes/spaghetti.html">Spaghetti</a>
         <a href="recipes/oatmeal.html">Oatmeal</a>
         <a href="recipes/chicken-wrap.html">Chicken Wrap</a>
     </body>
