--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Fantastic recipes and where to find them</title>
+        <link rel="stylesheet" href="./index.css">
     </head>
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/spaghetti.html">Spaghetti</a>
-        <a href="./recipes/oatmeal.html">Oatmeal</a>
-        <a href="./recipes/chicken-wrap.html">Chicken Wrap</a>
+        <ul>
+        <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+            <p></p>
+        <li><a href="./recipes/oatmeal.html">Oatmeal</a></li>
+            <p></p>
+        <li><a href="./recipes/chicken-wrap.html">Chicken Wrap</a></li>
+    </ul>
     </body>
 </html>
