Added external templated css to each recipe page

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="./recipe.css">
 </head>
 <body>
     <h1>Spaghetti</h1>
-    <img src="../images/Spaghetti.jpg" alt="Delicious spaghetti">
+    <img src="../images/Spaghetti.jpg" alt="Delicious spaghetti" class="center">
     <h3>Description</h3>
     <p>Spaghetti, the most delicious noodle based food on the face of the planet.
         Only facts are being stated. This recipe will allow you to prepare spaghetti
