--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="./recipe.css">
 </head>
 <body>
     <h1>Oatmeal</h1>
